--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
-<HTML lang="en">
-    <HEAD>
-        <TITLE>HBNB</TITLE>
-    </HEAD>
-    <BODY>
-        {% if not state_id %}
-            <H1>States</H1>
-	    <UL>
-	        {% for state in states.values()|sort(attribute='name') %}
-		    <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+<html lang="en">
+    <head>
+        <title>HBNB</title>
+    </head>
+    <body>
+	{% if mode == 'all' %}
+		<h1>States</h1>
+	    	<ul>
+      		{% for state in states.values()|sort(attribute='name') %}
+      			<li>{{ state.id }}: <b>{{ state.name }}</b></li>
+      		{% endfor %}
+	    	</ul>
+	{% elif mode == 'id' %}
+		<h1>State: {{ states.name }}</h1>
+		<h3>Cities:</h3>
+		<ul>
+		{% for city in states.cities|sort(attribute="name") %}
+			<li>{{ city.id }}: <b>{{ city.name }}</b></li>
 		{% endfor %}
-	    </UL>
-	{% elif state_id in states%}
-	    {% set state = states[state_id] %}
-	        <H1>State: {{ state.name }}</H1>
-		<H3>Cities</H3>
-		    <UL>
-			{% for city in state.cities|sort(attribute='name') %}
-                            <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-                        {% endfor %}
-		    </UL>
+		</ul>
 	{% else %}
-	    <H1>Not found!</H1>
+		<h1>Not found!</h1>
 	{% endif %}
-    </BODY>
-</HTML>
+    </body>
+</html>
