--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
+<HTML lang="en">
+    <HEAD>
         <title>HBNB</title>
-    </head>
-    <body>
-	    <h1>States</h1>
-	    <ul>
+    </HEAD>
+    <BODY>
+	    <H1>States</H1>
+	    <UL>
     		{% for state in states.values() | sort(attribute='name') %}
-			<li>{{ state.id }}: <b>{{ state.name }}<b></li>
+			<LI>{{ state.id }}: <B>{{ state.name }}<B></LI>
     		{% endfor %}
-    	    </ul>
-    </body>
+    	    </UL>
+    </BODY>
 </html>
